# eval_framework

./: .gitignore  CITATION.cff  README.md  RELEASE.md  __init__.py  cli.py  pyproject.toml  samplers.py  utils.py
examples/: batch_eval.sh  compare_two_runs.sh  shard_parallel_eval.sh
tasks/: __init__.py  alpaca_eval_task.py  arena_hard_task.py  healthbench_task.py  ifbench_task.py  ifeval_task.py  pairwise_base.py  writingbench_task.py
tasks/alpaca_eval/: __init__.py
tasks/arena_hard/: __init__.py
tasks/healthbench/: __init__.py
tasks/ifbench/: __init__.py
tasks/ifbench/data/: IFBench_test.jsonl
tasks/ifeval/: __init__.py  evaluation.py  instructions.py
tasks/writingbench/: __init__.py  calculate_scores.py
tasks/writingbench/benchmark_query/: benchmark_single_prompt.jsonl
tests/: test_arena_hard_bundled.py
tools/: aggregate_runs.py  judge_compare.py  log_monitor_agent.py  plot_hacking_rate.py  plot_training_curves.py  rejudge_alpaca_arena_ports.sh  reward_hacking_analysis.py
